app-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: onboarding-api 

spec:
  replicas: 1
  selector:
    matchLabels:
      app: api 
  template:
    metadata:
      labels:
        app: api
    
    spec:
      containers:
        - name: api
          image: async-app:latest
          imagePullPolicy: Never
          ports:
          - containerPort: 8000
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service 
metadata:
  name: api-service
spec:
  type: NodePort
  ports:
  - port: 8000
    nodePort: 30001
  selector:
    app: api

---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: onboarding-worker 
spec: 
  replicas: 2 # Easy scaling!!
  selector:
    matchLabels:
      app: worker 
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: async-app:latest
        imagePullPolicy: Never
        command: ["celery","-A","app.tasks.celery_app","worker","--loglevel=info"]
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
