flower-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: onboarding-flower

spec:
  replicas: 1
  selector: 
    matchLabels:
      app: flower 
  
  template:
    metadata:
      labels:
        app: flower

    spec:
      containers:
        - name: flower
          image: dhiraj918106/async-app:latest
          imagePullPolicy: Always
          # command to start flower pointing to our app
          command: ["celery","-A","app.tasks.celery_app","flower","--port=5555"]
          ports:
          - containerPort: 5555
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service 
metadata:
  name: flower-service
spec:
  type: NodePort
  ports:
  - port: 5555
    targetPort: 5555
    nodePort: 30002 # Access flower at this Port
  selector:
    app: flower
