rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq 
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management 
          ports:
            - containerPort: 5672
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service 
metadata:
  name: rabbitmq

spec:
  ports:
  - port: 5672
  selector:
    app: rabbitmq
